.helm/templates/example-service.yml
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  selector:
    app: example
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
